overflow issue

--- a/src/greentaj.css
+++ b/src/greentaj.css
@@ -76,7 +76,6 @@
      background: var(--white);
      color: var(--gray-900);
      overflow-x: hidden;
-     overflow-y: hidden;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      text-rendering: optimizeLegibility;
